-Reduced the spirit amulet's homing seeds base damage from 30 to 20, and they no longer inflict knockback on enemies
-NES cartridge now has a lower chance to spawn red apparitions, they can now only pierce an enemy 3 times, and there is now a 6 second delay before another can be spawned
-Warlock's cloak now gives 2 flat summon damage instead of 5


Enemy & Boss Changes:

-Added slight screenshake to orro-boros flesh spike attacks
-Reduced orro-boros overall movement speed a bit, and reduced their overall movement acceleration (The amount reduced is different for each attack)
-Orro-boros gravity affected spit projectiles now have a maximum falling speed instead of constantly falling faster over time
-Orro-boro now slows down way more before dashing in its phase 1 chase attack to telegraph them better before they happen
-Orro-boros phase 1 attack where it chases the player, shoots spreads of spit, and then charges has been changed, it now moves at the player way slower, charges a bit slower, and spits a more natural looking spread of projectiles
-Orro-boros phase 1 upward charge attack where it spits 2 spreads of projectiles upward that fall down has been changed to be a stream of projectiles that are shot in random directions upward and then fall down
-Orro-boro in phase 1 now emerges out of the ground towards the side of the player after finishing its flesh spine attack to prevent players from getting hit unfairly
-Orro-boro now spawns flesh spines less frequently in phase 1 during its flesh spine attack
-Orros spit drop attack in phase 2 is now more natural, the projectiles will now fall down in slightly randomized directions instead of straight down, and now only shoots them if it is within a certain range of the players X-position
-Orro now shoots spit projectiles in its phase 2 spit drop attack way more frequently while enraged, instead of shooting spreads of them while enraged
-Reduced boros short lunge dash attack speed a bit